--- a/report/pers_schedule/biometrics_submission/supplementary/derivation_estimation_mean_var.tex
+++ b/report/pers_schedule/biometrics_submission/supplementary/derivation_estimation_mean_var.tex
@@ -1,6 +1,6 @@
 % !TEX root =  ../supplementary.tex
 \section{Derivations for Equation \ref{eq : expected_time_survprob} and \ref{eq : var_time_survprob} of the Main Manuscript}
-In this section we present the derivations for Equation \ref{eq : expected_time_survprob} and \ref{eq : var_time_survprob} of the main manuscript. To this end, we first expand the formula for dynamic survival probability presented in Equation \ref{eq : dynamic_surv_prob} of the main manuscript.
+In this section we present the derivations for Equation \ref{eq : expected_time_survprob} and \ref{eq : var_time_survprob} of the main manuscript. To this end, we first expand the formula for dynamic survival probability presented in Section \ref{subsec : loss_functions} of the main manuscript.
 \begin{equation}
 \label{eq : dyn_surv_prob_expanded}
 \begin{split}
