--- a/report/pers_schedule/biometrics_submission/bibliography.bib
+++ b/report/pers_schedule/biometrics_submission/bibliography.bib
@@ -9,6 +9,72 @@ year={2015},
 publisher={Elsevier}
 }
 
+@article{gentleman1994maximum,
+  title={Maximum likelihood for interval censored data: {Consistency} and computation},
+  author={Gentleman, Robert and Geyer, Charles J},
+  journal={Biometrika},
+  volume={81},
+  number={3},
+  pages={618--623},
+  year={1994},
+  publisher={Oxford University Press}
+}
+
+@article{klotz2009clinical,
+  title={Clinical results of long-term follow-up of a large, active surveillance cohort with localized prostate cancer},
+  author={Klotz, Laurence and Zhang, Liying and Lam, Adam and Nam, Robert and Mamedov, Alexandre and Loblaw, Andrew},
+  journal={Journal of Clinical Oncology},
+  volume={28},
+  number={1},
+  pages={126--131},
+  year={2009},
+  publisher={American Society of Clinical Oncology}
+}
+
+@article{loeb2016immediate,
+  title={Immediate versus delayed prostatectomy: {Nationwide} population-based study},
+  author={Loeb, Stacy and Folkvaljon, Yasin and Robinson, David and Makarov, Danil V and Bratt, Ola and Garmo, Hans and Stattin, P{\"a}r},
+  journal={Scandinavian journal of urology},
+  volume={50},
+  number={4},
+  pages={246--254},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
+
+@article{huang2009latent,
+  title={Latent-model robustness in joint models for a primary endpoint and a longitudinal process},
+  author={Huang, Xianzheng and Stefanski, Leonard A and Davidian, Marie},
+  journal={Biometrics},
+  volume={65},
+  number={3},
+  pages={719--727},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@article{rizopoulos2008shared,
+  title={Shared parameter models under random effects misspecification},
+  author={Rizopoulos, Dimitris and Verbeke, Geert and Molenberghs, Geert},
+  journal={Biometrika},
+  volume={95},
+  number={1},
+  pages={63--74},
+  year={2008},
+  publisher={Oxford University Press}
+}
+
+@article{proust2014joint,
+  title={Joint latent class models for longitudinal and time-to-event data: A review},
+  author={Proust-Lima, C{\'e}cile and S{\'e}ne, Mb{\'e}ry and Taylor, Jeremy MG and Jacqmin-Gadda, H{\'e}l{\`e}ne},
+  journal={Statistical methods in medical research},
+  volume={23},
+  number={1},
+  pages={74--90},
+  year={2014},
+  publisher={Sage Publications Sage UK: London, England}
+}
+
 @article{vickers2006decision,
   title={Decision curve analysis: a novel method for evaluating prediction models},
   author={Vickers, Andrew J and Elkin, Elena B},
@@ -18,6 +84,17 @@ publisher={Elsevier}
   pages={565--574},
   year={2006},
   publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{razali2013mixture,
+  title={Mixture {Weibull} distributions for fitting failure times data},
+  author={Razali, Ahmad Mahir and Al-Wakeel, Ali A},
+  journal={Applied Mathematics and Computation},
+  volume={219},
+  number={24},
+  pages={11358--11364},
+  year={2013},
+  publisher={Elsevier}
 }
 
 @article{coley2017,
