--- a/report/pers_schedule/biometrics_submission/mainmatter/discussion.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/discussion.tex
@@ -6,4 +6,4 @@ In this paper we presented personalized schedules based on joint models for time
 
 We demonstrated using the PRIAS dataset that the personalized schedules adjust the time of biopsy on the basis of results from historical PSA measurements and repeat biopsies, even when the two are not in concordance with each other (Web Appendix D). Secondly, we conducted a simulation study to compare various schedules. We observed that the schedules based on expected and median time of GR conduct only two biopsies on average to detect GR, which is promising compared to PRIAS (4.9 biopsies) and annual schedule (5.2 biopsies). We also observed that the performance of the schedules depends on the true GR time of the patient. For example, in simulated patients who have a slowly progressing PCa (subgroup $G_3$), personalized schedule based on expected time of GR detects GR one year earlier on average compared to patients who have a faster progressing PCa (subgroup $G_1$), while conducting approximately the same number of biopsies for both subgroups. For subgroup $G_1$, the annual or PRIAS schedule may be preferred because they detect GR at 6 and 7.4 months since its occurrence, respectively. However for slowly progressing PCa patients up to 6 biopsies were needed to detect GR at 6 and 8 months, respectively. In such scenarios, that is, where it is not known in advance if the patient will have a faster or slower progression of PCa, the hybrid approach provides an interesting alternative. This because, it conducts one biopsy less than the annual schedule in faster progressing PCa patients while detecting GR at 10.3 months since its occurrence on average. Whereas, for slowly progressing PCa patients it conducts two biopsies less than the annual schedule while detecting GR at 8.6 months since its occurrence on average.
 
-While each of the personalized schedules have their own advantages and disadvantages, they also offer multiple choices to the AS programs to choose one as per their requirements, instead of choosing a common fixed schedule for all patients. In this regard, there is potential to develop personalized schedules using loss functions which asymmetrically penalize overshooting/undershooting the target GR time. Furthermore, for dynamic risk of GR based schedules we chose the threshold $\kappa$ using $\mbox{F}_1$ score. However in practice, a patient's consent on the threshold may be required. More simulations are required to evaluate various fixed thresholds used by doctors in practice. The threshold can also be chosen using decision analytic approaches such as the net benefit measure \citep{vickers2006decision}. Further work is required to evaluate various decision analytic approaches for selecting the threshold $\kappa$. Although in this work we assumed that the time of GR was interval censored, in reality the Gleason scores are susceptible to inter-observer variation \citep{Gleason_interobs_var}. Models and schedules which account for error in measurement of time of GR will be interesting to investigate further \citep{coley2017}. Lastly, there is potential for including diagnostic information from magnetic resonance imaging (MRI) or DRE. Unlike PSA levels, such information may not always be continuous in nature, in which case our proposed methodology needs to be extended by utilizing the framework of generalized linear mixed models.
+While each of the personalized schedules have their own advantages and disadvantages, they also offer multiple choices to the AS programs to choose one as per their requirements, instead of choosing a common fixed schedule for all patients. In this regard, there is potential to develop personalized schedules using loss functions which asymmetrically penalize overshooting/undershooting the target GR time. Furthermore, for dynamic risk of GR based schedules we chose the threshold $\kappa$ using $\mbox{F}_1$ score. However in practice, patients' preference need to be considered in choosing $\kappa$. More simulations are required to evaluate various fixed thresholds used by doctors in practice. The threshold can also be chosen using decision analytic approaches such as the net benefit measure \citep{vickers2006decision}. Further work is required to evaluate various decision analytic approaches for selecting the threshold $\kappa$. Although in this work we assumed that the time of GR was interval censored, in reality the Gleason scores are susceptible to inter-observer variation \citep{Gleason_interobs_var}. Models and schedules which account for error in measurement of time of GR will be interesting to investigate further \citep{coley2017}. Lastly, there is potential for including diagnostic information from magnetic resonance imaging (MRI) or DRE. Unlike PSA levels, such information may not always be continuous in nature, in which case our proposed methodology needs to be extended by utilizing the framework of generalized linear mixed models.
