--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/algorithm_two_col.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/algorithm_two_col.tex
@@ -4,7 +4,7 @@
 Enter Active Surveillance.
 \begin{enumerate}
 \item Measure baseline PSA and Gleason.
-\item Reset $s=t=T^{nv}=0$. 
+\item Reset $s=t=0$. 
 \item Reset $u = u^{pv} = \infty$.
 \end{enumerate}
 };
