--- a/report/pers_schedule/biometrics_submission/supplementary/demonstration_911_2340.tex
+++ b/report/pers_schedule/biometrics_submission/supplementary/demonstration_911_2340.tex
@@ -15,7 +15,7 @@ The evolution of PSA, repeat biopsy history and proposed times of biopsies for t
 
 \clearpage
 
-Patient 2340 presents a case where information from PSA levels and repeat biopsies is conflicting. In Web Figure \ref{web_fig : prias_demo_pid_2340} we can see that the PSA for this patient increased by 100\% between year two and year 3.2. If only information from PSA is considered, then we can see that proposed time of biopsy based on expected time of GR is preponed from 14.6 to 13.0 years during this period. However, if we also take into account the negative result from the repeat biopsy at year 2.5, then the proposed time of biopsy is postponed from 14.6 years to 15 years. Thus more weight is given to a recent negative biopsy result than PSA, which is in accordance with the clinical practice. The proposed time of biopsy based on dynamic risk of GR is also postponed from 2.3 to 3.6 years in light of the negative biopsy result.
+The third demonstration patient presents a case where information from PSA levels and repeat biopsies is not in concordance with each other. In Web Figure \ref{web_fig : prias_demo_pid_2340} we can see that the PSA for this patient increased by 100\% between year two and year 3.2. If only information from PSA is considered, then we can see that proposed time of biopsy based on expected time of GR is preponed from 14.6 to 13.0 years during this period. However, if we also take into account the negative result from the repeat biopsy at year 2.5, then the proposed time of biopsy is postponed from 14.6 years to 15 years. Thus more weight is given to a recent negative biopsy result than PSA, which is in accordance with the clinical practice. The proposed time of biopsy based on dynamic risk of GR is also postponed from 2.3 to 3.6 years in light of the negative biopsy result.
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/prias_demo/case_2340.eps}}
