--- a/report/pers_schedule/biometrics_submission/supplementary/prias_param_estimates.tex
+++ b/report/pers_schedule/biometrics_submission/supplementary/prias_param_estimates.tex
@@ -13,7 +13,7 @@ The posterior parameter estimates for the joint model we fitted to the PRIAS dat
 The effect of age only affects the baseline $\log_2 \mbox{PSA}$ score. However it is so small that it can be ignored for all practical purposes. Since the longitudinal evolution of $\log_2 \mbox{PSA}$ is modeled with non-linear terms, the interpretation of the coefficients corresponding to time is not straightforward. In lieu of the interpretation, in Web Figure \ref{fig : fitted_trend_psa} we present the fitted evolution of PSA over a period of 10 years for a hypothetical patient who was included in AS at the age of 70 years.
 
 \begin{figure}[!htb]
-\centerline{\includegraphics[width=\columnwidth]{images/fitted_trend_psa.eps}}
+\centerline{\includegraphics[width=\columnwidth]{images/model_fit/marginal_fitted_psa_normal.eps}}
 \caption{Fitted evolution of $\log_2 \mbox{PSA}$ over a period of 10 years with 95\% credible interval, for a hypothetical patient who was included in AS at the age of 70 years.}
 \label{fig : fitted_trend_psa}
 \end{figure}
@@ -24,14 +24,14 @@ The effect of age only affects the baseline $\log_2 \mbox{PSA}$ score. However i
 \label{tab : PSA_long}
 \begin{tabular}{lrrrrr}
 \Hline
-& Mean   & Std. Dev           & 2.5\%               & 97.5\%              & P              \\ \hline
+Variable & Mean   & Std. Dev           & 2.5\%               & 97.5\%              & P              \\ \hline
 Intercept                            &  2.455 & 0.012 & 2.433 & 2.480               & \textless0.000 \\
 $(\mbox{Age} - 70)$                         & 0.003 & 0.001 & 4.9 $\times 10^{-4}$ & 0.006 & 0.032          \\
 $(\mbox{Age} - 70)^2$       & -0.001 & 1.4 $\times 10^{-4}$ & -0.001 & -3.5 $\times 10^{-4}$ & \textless0.000 \\
-Spline: visitTimeYears{[}0.0, 0.1{]}   & -0.006 & 0.012 & -0.031 & 0.017 & 0.674 \\
-Spline: visitTimeYears{[}0.1, 0.5{]} & 0.228 & 0.019 & 0.192 & 0.265               & \textless0.000 \\
-Spline: visitTimeYears{[}0.5, 4.0{]} & 0.140 & 0.029 & 0.088 & 0.197               & \textless0.000 \\
-Spline: visitTimeYears{[}4.0, 7.0{]}   & 0.303 & 0.039 & 0.227 & 0.379               & \textless0.000 \\
+Spline: visit time {[}0.0, 0.1{]} years   & -0.006 & 0.012 & -0.031 & 0.017 & 0.674 \\
+Spline: visit time {[}0.1, 0.5{]} years & 0.228 & 0.019 & 0.192 & 0.265               & \textless0.000 \\
+Spline: visit time {[}0.5, 4.0{]} years & 0.140 & 0.029 & 0.088 & 0.197               & \textless0.000 \\
+Spline: visit time {[}4.0, 7.0{]} years   & 0.303 & 0.039 & 0.227 & 0.379               & \textless0.000 \\
 $\sigma$                               & 0.324 & 0.001 & 0.321 & 0.326              &  \\ \hline
 \end{tabular}
 \end{center}
@@ -39,7 +39,7 @@ $\sigma$                               & 0.324 & 0.001 & 0.321 & 0.326          
 
 \clearpage
 
-For the relative risk sub-model, the parameter estimates in \ref{tab : PSA_survival} show that only $\log_2 \mbox{PSA}$ velocity and the age at the time of inclusion in AS are strongly associated with the hazard of GR. For any patient, an increase in $\log_2 \mbox{PSA}$ velocity from -0.07 to 0.12 (first and third quartiles of the fitted velocities, respectively) corresponds to a 1.55 fold increase in the hazard of GR. A 10 year increase in the age at the time of inclusion in AS corresponds to a 1.44 fold increase in the hazard of GR. The effect of $\log_2 \mbox{PSA}$ value is small enough to be safely ignored for all practical purposes.
+For the relative risk sub-model, the parameter estimates in \ref{tab : PSA_survival} show that $\log_2 \mbox{PSA}$ velocity and the age at the time of inclusion in AS are strongly associated with the hazard of GR. For any patient, an increase in $\log_2 \mbox{PSA}$ velocity from -0.07 to 0.12 (first and third quartiles of the fitted velocities, respectively) corresponds to a 1.55 fold increase in the hazard of GR. A 10 year increase in the age at the time of inclusion in AS corresponds to a 1.44 fold increase in the hazard of GR.
 
 \begin{table}[!htb]
 \begin{center}
@@ -52,6 +52,25 @@ $(\mbox{Age} - 70)$                    & 0.037 & 0.006 & 0.025 & 0.0490         
 $(\mbox{Age} - 70)^2$   & -0.001 & 0.001 & -0.003 & 1.8 $\times 10^{-4}$ & 0.104          \\
 $\log_2 \mbox{PSA}$                  & -0.049 & 0.064 & -0.172 & 0.078 & 0.414         \\
 Slope($\log_2 \mbox{PSA}$)           & 2.407 & 0.319 & 1.791 & 3.069 & \textless0.000 \\
+\hline
+\end{tabular}
+\end{center}
+\end{table}
+
+\clearpage
+
+To compare the predictive performance of a model having association between hazard of GR and $\log_2 \mbox{PSA}$ values, versus a model having the association with both $\log_2 \mbox{PSA}$ value and velocity, we calculate the area under the receiver operating characteristic curves, also called AUC \citep*{landmarking2017} for these models. Since in a joint model time dependent AUC is more relevant, we calculate the AUC at year one, year two and year three of follow-up in AS. The time window for which the AUC is calculated is one year. The resulting estimates are presented in \ref{tab : AUC}.
+
+\begin{table}[!htb]
+\begin{center}
+\caption{Area under the receiver operating characteristic curves for joint models fitted to the PRIAS dataset.}
+\label{tab : AUC}
+\begin{tabular}{lrrr}
+\Hline
+Association of hazard of GR                      & Year one   & Year two & Year three \\ 
+\hline
+with both $\log_2 \mbox{PSA}$ value and velocity                    & 0.61 & 0.66 & 0.60 \\
+with only $\log_2 \mbox{PSA}$ value                   & 0.59 & 0.60 & 0.59 \\
 \hline
 \end{tabular}
 \end{center}
